Issue #19429, #19437: fix error handling in the OSError constructor